<resources>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="flickr_showword">Flickr</string>
    <string name="flickr_no_client">未安装Flickr客户端</string>
    <string name="flickr_content">Flickr只支持图片分享</string>
    <string name="flickr_no_content">请设置分享内容</string>
    <string name="foursquare_showword">Foursquare</string>
    <string name="foursquare_no_client">未安装Foursquare客户端</string>
    <string name="foursquare_content">Foursquare只支持纯图片分享</string>
    <string name="kakao_showword">Kakao Talk</string>
    <string name="kakao_no_client">未安装Kakao Talk客户端</string>
    <string name="kakao_content">Kakao Talk只支持图片、文本分享</string>
    <string name="kakao_no_content">请设置分享内容</string>
    <string name="umeng_socialize_text_laiwang_key">来往</string>
    <string name="umeng_socialize_text_laiwang_dynamic_key">来往动态</string>
    <string name="umeng_socialize_laiwang_default_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能</string>
    <string name="line_showword">LINE</string>
    <string name="line_no_client">未安装Line客户端</string>
    <string name="line_content">Line只支持文本，图片</string>
    <string name="line_no_content">请设置分享内容</string>
    <string name="linkedin_showword">LinkedIn</string>
    <string name="linkedin_no_client">未安装LinkedIn客户端</string>
    <string name="linkedin_content">linked只支持纯文本分享</string>
    <string name="pocket_showword">Pocket</string>
    <string name="pocket_no_client">未安装pocket客户端</string>
    <string name="pocket_content">pocket只支持网页链接分享</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_tip_blacklist">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed">登录失败…</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform">登录帐号</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中…</string>
    <string name="umeng_socialize_content_hint">说点啥…</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des" />
    <string name="umeng_socialize_share">分享</string>
    <string name="tumblr_showword">Tumblr</string>
    <string name="tumblr_no_client">未安装Tumblr客户端</string>
    <string name="tumblr_content">Tumblr只支持文本，图片，图文分享</string>
    <string name="tumblr_no_content">请设置分享内容</string>
    <string name="whatsapp_showword">WhatsApp</string>
    <string name="whatsapp_no_client">未安装有WhatsApp客户端</string>
    <string name="whatsapp_content">有道云笔记只支持文本，图片</string>
    <string name="whatsapp_no_content">请设置分享内容</string>
    <string name="ynote_showword">有道云笔记</string>
    <string name="ynote_no_client">未安装有道云笔记客户端</string>
    <string name="ynote_content">有道云笔记只支持文本，图片，图文分享</string>
    <string name="ynote_no_content">请设置分享内容</string>
    <string name="np_number_picker_increment_scroll_mode">%s tap and hold.</string>
    <string name="np_number_picker_increment_scroll_action">Slide up to increment and down to decrement.</string>
    <string name="np_number_picker_increment_button">Increment</string>
    <string name="np_number_picker_decrement_button">Decrement</string>
    <string name="time_picker_dialog_title">Set time</string>
    <string name="date_picker_dialog_title">Set date</string>
    <string name="date_time_set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="time_picker_increment_minute_button">Increment minute</string>
    <string name="time_picker_decrement_minute_button">Decrement minute</string>
    <string name="time_picker_increment_hour_button">Increment hour</string>
    <string name="time_picker_decrement_hour_button">Decrement hour</string>
    <string name="time_picker_increment_set_pm_button">Set PM</string>
    <string name="time_picker_decrement_set_am_button">Set AM</string>
    <string name="time_picker_separator">:</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__done">DONE</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="app_name">EZT加气站</string>
    <string name="inc_err_net_toast">网络不稳定或未联网，请重试！</string>
    <string name="inc_load_error">网络不稳定或未联网，请重试！</string>
    <string name="inc_start_yoga">Try Us Out</string>
    <string name="login">登录</string>
    <string name="sign_up">Sign Up</string>
    <string name="inc_session_title">首页</string>
    <string name="inc_program_title">加气站</string>
    <string name="inc_community_title">积分</string>
    <string name="e_coupons_content">满200元可用</string>
    <string name="e_coupons_desc">仅限西安地区使用</string>
    <string name="e_money_icon">¥</string>
    <string name="e_c_info_name">姓名</string>
    <string name="finish">完成</string>
    <string name="coupons_validate_text">有效期至</string>
    <string name="e_security_question">安全问题</string>
    <string name="e_security_question_hint">安全密码用于保障您的帐户安全，请务必设置安全好记的密码！</string>
    <string name="e_answer">答案　　</string>
    <string name="e_input_pass">输入密码</string>
    <string name="e_confrom_pass">确认密码</string>
    <string name="tx_vervify">完成实名认证，得100积分！</string>
    <string name="e_text_vervif_hint">请上传文字清晰的证件正面照</string>
    <string name="e_text_click_to_show">点此查看示例</string>
    <string name="e_text_jsz1">驾驶证</string>
    <string name="e_text_xsz">行驶证</string>
    <string name="e_text_vervify_commit">提交实名认证</string>
    <string name="take_photos">拍照</string>
    <string name="from_the_album_to_choose">从相册选择</string>
    <string name="cancal">取消</string>
    <string name="e_input_true_name">请输入真实姓名</string>
</resources>