<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/e_act_bg"
    android:orientation="vertical" >

    <com.ezt.eztproject.view.TopBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
    </com.ezt.eztproject.view.TopBar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title_bar"
        android:layout_marginTop="@dimen/inc_dp_10"
        android:orientation="vertical"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inc_dp_20"
            android:layout_marginRight="@dimen/inc_dp_20"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e_c_info_name"
                    android:textColor="@color/inc_black"
                    android:textSize="@dimen/inc_dp_16" />

                <EditText
                    android:id="@id/edit_true_name"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/inc_dp_40"
                    android:layout_marginLeft="@dimen/inc_dp_20"
                    android:background="@drawable/e_c_edit_bg"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/e_input_true_name"
                    android:paddingLeft="3.0dip"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/inc_prompt"
                    android:textSize="@dimen/inc_sp_17" />
            </LinearLayout>

            <Button
                android:id="@id/btn_hint"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/inc_dp_30"
                android:layout_marginTop="@dimen/inc_dp_20"
                android:background="@color/e_vervify_n"
                android:text="@string/tx_vervify"
                android:textColor="@color/inc_item_background"
                android:textSize="@dimen/inc_dp_14"
                android:visibility="gone" />

            <View
                android:id="@id/un_ver_line"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/inc_dp_0_5"
                android:layout_marginTop="@dimen/inc_dp_20"
                android:background="@color/inc_complete_line" />

            <LinearLayout
                android:id="@id/vervify_hint_pre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/inc_dp_10"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/vervify_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/inc_dp_10"
                    android:text="@string/e_text_vervif_hint"
                    android:textColor="@color/e_vervify_hint"
                    android:textSize="@dimen/inc_dp_14" />

                <TextView
                    android:id="@id/click_to_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/e_text_click_to_show"
                    android:textColor="@color/e_show_exam"
                    android:textSize="@dimen/inc_dp_14"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5.0dip"
                    android:layout_weight="1.0"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@id/img_select_jsz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@mipmap/img_upload"
                        android:padding="@dimen/inc_dp_1"
                        android:scaleType="centerInside" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10.0dip"
                        android:text="@string/e_text_jsz1"
                        android:textColor="@color/e_vervify_tx"
                        android:textSize="@dimen/inc_dp_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_weight="1.0"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@id/img_select_xsz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@mipmap/img_upload"
                        android:padding="@dimen/inc_dp_1"
                        android:scaleType="centerInside" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10.0dip"
                        android:text="@string/e_text_xsz"
                        android:textColor="@color/e_vervify_tx"
                        android:textSize="@dimen/inc_dp_14" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@id/vervify_hint_splite"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/inc_dp_0_5"
                android:layout_marginTop="@dimen/inc_dp_10"
                android:background="@color/inc_complete_line" />

            <Button
                android:id="@id/btn_vervify_commit"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/inc_dp_45"
                android:layout_marginBottom="@dimen/inc_dp_20"
                android:layout_marginTop="@dimen/inc_dp_20"
                android:gravity="center"
                android:background="@drawable/e_shape_commplete"
                android:text="@string/e_text_vervify_commit"
                android:textColor="@color/inc_item_background"
                android:textSize="@dimen/inc_dp_14" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@id/take_phone_li"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1.1"
        android:background="@color/black_125"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@id/take_phone"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/inc_dp_48"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="6.0dip"
            android:text="@string/take_photos"
            android:textColor="@color/white"
            android:textSize="@dimen/inc_dp_14" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@color/inc_complete_line" />

        <TextView
            android:id="@id/select_from_sd"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/inc_dp_48"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="6.0dip"
            android:text="@string/from_the_album_to_choose"
            android:textColor="@color/white"
            android:textSize="@dimen/inc_dp_14" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@color/inc_complete_line" />

        <TextView
            android:id="@id/cancel"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/inc_dp_48"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="6.0dip"
            android:text="@string/cancal"
            android:textColor="@color/white"
            android:textSize="@dimen/inc_dp_14" />
    </LinearLayout>

</RelativeLayout>