<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/e_act_bg">

    <com.ezt.eztproject.view.TopBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
    </com.ezt.eztproject.view.TopBar>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_marginLeft="@dimen/inc_dp_20"
        android:layout_marginRight="@dimen/inc_dp_20"
        android:layout_marginTop="@dimen/inc_dp_20"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/e_yellow"
            android:gravity="center_vertical"
            android:minWidth="@dimen/inc_dp_80"
            android:padding="5.0dip"
            android:text="@string/e_security_question_hint"
            android:textColor="@color/e_red"
            android:textSize="@dimen/inc_dp_16" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inc_dp_5"
            android:layout_marginRight="@dimen/inc_dp_5"
            android:layout_marginTop="@dimen/inc_dp_15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:gravity="center_vertical"
                android:minWidth="@dimen/inc_dp_80"
                android:text="@string/e_security_question"
                android:textColor="@color/inc_black"
                android:textSize="@dimen/inc_dp_16" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/inc_dp_20"
                android:background="@drawable/shape_border_write_san"
                android:orientation="horizontal">

                <Spinner
                    android:id="@id/spinner_qestion"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:visibility="gone" />

                <TextView
                    android:id="@id/qestion_text"
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bk_date"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/inc_dp_16" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inc_dp_5"
            android:layout_marginRight="@dimen/inc_dp_5"
            android:layout_marginTop="@dimen/inc_dp_30"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/inc_dp_80"
                android:text="@string/e_answer"
                android:textColor="@color/inc_black"
                android:textSize="@dimen/inc_dp_16" />

            <EditText
                android:id="@id/edit_e_answer"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/inc_dp_40"
                android:layout_marginLeft="@dimen/inc_dp_20"
                android:background="@drawable/shape_border_write_san"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="请输入安全问题答案"
                android:paddingLeft="2.0dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/inc_prompt"
                android:textSize="@dimen/inc_sp_17" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inc_dp_5"
            android:layout_marginRight="@dimen/inc_dp_5"
            android:layout_marginTop="@dimen/inc_dp_30"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/inc_dp_80"
                android:text="@string/e_input_pass"
                android:textColor="@color/inc_black"
                android:textSize="@dimen/inc_dp_16" />

            <EditText
                android:id="@id/edit_set_pass"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/inc_dp_40"
                android:layout_marginLeft="@dimen/inc_dp_20"
                android:background="@drawable/shape_border_write_san"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="请输入6位数字密码"
                android:inputType="textPassword"
                android:maxLength="6"
                android:paddingLeft="2.0dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/inc_prompt"
                android:textSize="@dimen/inc_sp_17" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inc_dp_5"
            android:layout_marginRight="@dimen/inc_dp_5"
            android:layout_marginTop="@dimen/inc_dp_30"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/inc_dp_80"
                android:text="@string/e_confrom_pass"
                android:textColor="@color/inc_black"
                android:textSize="@dimen/inc_dp_16" />

            <EditText
                android:id="@id/edit_set_re_pass"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/inc_dp_40"
                android:layout_marginLeft="@dimen/inc_dp_20"
                android:background="@drawable/shape_border_write_san"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="再次输入6位数字密码"
                android:inputType="textPassword"
                android:maxLength="6"
                android:paddingLeft="2.0dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/inc_prompt"
                android:textSize="@dimen/inc_sp_17" />
        </LinearLayout>

        <Button
            android:id="@id/btn_complete"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/inc_dp_45"
            android:layout_marginBottom="@dimen/inc_dp_20"
            android:layout_marginTop="@dimen/inc_dp_30"
            android:background="@drawable/e_shape_commplete"
            android:text="@string/finish"
            android:textColor="@color/inc_item_background" />
    </LinearLayout>
</RelativeLayout>